# ion-core

./: CMakeLists.txt  README.md
depend/: .clang-format
depend/catch2/: catch.hpp
depend/concurrentqueue/: concurrentqueue.h
depend/cpufeatures/arm/: cpuinfo_aarch64.c
depend/fxpoint/: Fixed.h
depend/hopscotch_map/: hopscotch_growth_policy.h  hopscotch_hash.h
depend/itoa/: to_text_from_integer.h
depend/readerwriterqueue/: readerwriterqueue.h
depend/tlsf/: CMakeLists.txt
scripts/: setup.bat
src/codegen/: CodegenContext.h  CodegenFile.h  CodegenMain.cpp  ComponentWriter.cpp  ComponentWriter.h  ModelWriter.cpp  ModelWriter.h  NatvisWriter.cpp  NatvisWriter.h  Reader.h  SerializationWriter.cpp  SerializationWriter.h  SourceCodeWriter.cpp  SourceCodeWriter.h  StoreSettings.h  StoreWriter.cpp  StoreWriter.h  stdafx.cpp  stdafx.h
src/ion/: Base.h  CMakeLists.txt  Config.h  Types.h  targetver.h
src/ion/arena/: ArenaAllocator.h  ArenaUtil.h  ArenaVector.h  UniqueArenaPtr.h
src/ion/batch/: BoolBatch.h  VecBatch.h
src/ion/byte/: ByteBuffer.h  ByteBufferBase.h  ByteReader.h  ByteSerialization.cpp  ByteSerialization.h  ByteWriter.cpp  ByteWriter.h
src/ion/compression/: Quantization.h  StreamCompressor.h
src/ion/concurrency/: AtomicFlag.h  AutoLock.h  Delegate.h  DoubleBuffer.h  MPMCQueue.h  MPSCQueue.h  Mailing.h  Mutex.cpp  Mutex.h  Mutex.inl  Runner.cpp  Runner.h  SCThreadSynchronizer.cpp  SCThreadSynchronizer.h  SPSCQueue.h  Synchronized.h  Thread.cpp  Thread.h  ThreadSynchronization.inl  ThreadSynchronizer.cpp  ThreadSynchronizer.h
src/ion/container/: Algorithm.h  Array.h  ArrayView.h  DensePriorityQueue.h  Deque.h  ForEach.h  ObjectWrapper.h  PriorityQueue.h  RadixSort.h  RawBuffer.h  RingBuffer.h  Set.h  Sort.h  StableSort.h  StackContainer.h  StackSet.h  StackUnorderedMap.h  StaticRawBuffer.h  StaticVector.h  UnorderedMap.h  UnorderedSet.h  Vector.h
src/ion/core/: Core.cpp  Core.h  Engine.cpp  Engine.h  OptionParser.cpp  OptionParser.h  StaticInstance.h
src/ion/database/: DBComponent.h  DBComponentAdmin.h  DBComponentConfig.h  DBComponentDataVector.h  DBComponentId.h  (+5 more)
visualizers/: core.natvis
(+156 files in other folders)
